--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My books</string>
+    <string name="app_name">My Books</string>
     <string name="ano">Year:</string>
     <string name="autor">Author:</string>
-    <string name="cadastro_cancelado">Registration canceled</string>
     <string name="cancelar">CANCEL</string>
     <string name="cadastrar_novo">REGISTER NEW</string>
     <string name="listar_livros">LIST BOOKS</string>
@@ -13,4 +12,7 @@
     <string name="salvar">SAVE</string>
     <string name="titulo">Title:</string>
     <string name="buscar">SEARCH</string>
+    <string name="cancelado">Canceled</string>
+    <string name="livro_deletado">Deleted Book</string>
+    <string name="deletar">DELETE</string>
 </resources>
