--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
     <string name="ano">Ano:</string>
     <string name="nota">Nota:</string>
     <string name="livro_salvo">Livro Salvo</string>
-    <string name="cadastro_cancelado">Cadastro cancelado</string>
+    <string name="livro_deletado">Livro Deletado</string>
+    <string name="cancelado">Cancelado</string>
     <string name="nenhum_livro_cadastrado">Nenhum Livro Cadastrado</string>
     <string name="buscar">BUSCAR</string>
+    <string name="deletar">DELETAR</string>
 </resources>
