--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,4 +16,5 @@
     <string name="livro_deletado">Deleted Book</string>
     <string name="deletar">DELETE</string>
     <string name="proximo">PRÓXIMO</string>
+    <string name="list_view">List View</string>
 </resources>
