--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="pageview">PAGE VIEW</string>
     <string name="swipe_e_dragdrop">SWIPE AND DRAGDROP</string>
     <string name="anterior">BACK</string>
+    <string name="gridview">GridView</string>
 </resources>
